--- a/styles/index.less
+++ b/styles/index.less
@@ -2,20 +2,38 @@
 .filepath-prompt {
   min-width: 60vw
 }
+
+
 .file-templates-list {
   @import "ui-variables";
   @duration: .4s;
 
   padding-bottom: @component-padding;
+  max-height: 32em;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 
-  > .btn.icon-chevron-right::before {
+  .btn {
+    flex: 1 0 auto;
+  }
+
+  .icon-chevron-right::before {
     transition: @duration / 2 transform ease }
 
-  &.expanded > .btn.icon-chevron-right::before {
+  .expanded .icon-chevron-right::before {
     transform: rotate(90deg) }
 
+  atom-panel.modal & ol.list-group {
+    min-height: 0 !important;
+    max-height: 50vh;
+  }
+
   .list-group {
-    max-height: 24vh;
+    margin-top: @component-padding;
+    align-self: stretch;
     opacity:    1;
     overflow:   auto;
     transition: @duration max-height ease, @duration opacity ease-out }
