--- a/styles/index.less
+++ b/styles/index.less
@@ -4,6 +4,16 @@
 }
 
 
+.path-field-container nav span::after {
+  content:        "/";
+  display:        inline-block;
+  padding:        0 0.3em;
+  position:       relative;
+  font-size:      2.2em;
+  font-weight:    200;
+  vertical-align: middle;
+}
+
 .file-templates-list {
   @import "ui-variables";
   @duration: .4s;
