Cleanup & enhaced path field implementation

--- a/styles/index.less
+++ b/styles/index.less
@@ -21,7 +21,7 @@
   }
 
   span:hover {
-    color: @input-text-color-active;
+    color: @text-color;
     background-color: @button-background-color-hover;
   }
 
